<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#1A000000"
    android:id="@+id/def_dialog"
    android:orientation="vertical">

    <include
        android:id="@+id/def_actionBar"
        layout="@layout/screen_action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_massage"
        style="@style/Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        tools:ignore="RtlSymmetry" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:paddingLeft="24dp"
        android:paddingTop="16dp"
        android:paddingEnd="24dp"
        android:paddingRight="24dp"
        android:paddingBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_massage">

        <LinearLayout
            android:id="@+id/btn_left_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/day_night_bg_btn"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:gravity="center"
            android:clickable="true"
            android:elevation="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:focusable="true"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/btn_left"
                style="@style/Text.Title.Alternative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_recant"
                android:clickable="false"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_right_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/day_night_bg_btn"
            android:gravity="center"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:clickable="true"
            android:elevation="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:focusable="true"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/btn_right"
                style="@style/Text.Title.Alternative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_delete"
                android:clickable="false"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>