<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/fragment_arxive_scene">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/def_cl_action_bar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/day_night_actionbar_background"
        android:clickable="false"
        app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/igb_back"
                style="@style/ButtonStyleBorderless"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="14dp"
                android:contentDescription="@string/text_todo"
                android:scaleType="centerCrop"
                android:src="@drawable/day_night_ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/tv_title"
                style="@style/Text.Title.Alternative"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|left"
                android:maxLines="1"
                android:paddingLeft="24dp"
                android:text="@string/text_title"
                app:layout_constraintLeft_toRightOf="@id/igb_back"
                app:layout_constraintRight_toLeftOf="@id/btn_menu"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <ImageButton
                android:id="@+id/btn_menu"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="14dp"
                android:background="@drawable/day_night_ic_menu_more"
                android:contentDescription="@string/text_todo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loading_and_message_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:elevation="6dp"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/def_cl_action_bar">

        <TextView
            android:id="@+id/textEmptylist"
            style="@style/Text.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amarante"
            android:padding="16dp"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="16dp"
            tools:text="Salom" />

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/progresBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="52dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/def_cl_action_bar"
        tools:listitem="@layout/item_dictionary" />
</androidx.constraintlayout.motion.widget.MotionLayout>
