<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/error_layout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:visibility="invisible"
    android:padding="32dp">

    <TextView
        android:id="@+id/tvError"
        style="@style/Text.Title"
        tools:layout_editor_absoluteX="16dp"
        tools:text="Salom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amarante"
        android:padding="16dp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>