<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
...
                android:id="@+id/actionBarHome"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible">

                <ImageButton
                    android:id="@+id/menuBtnHome"
                    style="@style/ButtonStyleBorderless"
                    android:layout_width="26dp"
                    android:layout_height="32dp"
                    android:layout_marginLeft="8dp"
                    android:contentDescription="@string/text_todo"
                    android:scaleType="fitCenter"
...
