<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/day_night_actionbar_background"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_transparent"
        android:padding="16dp">

        <ImageButton
            android:id="@+id/closeMenuButtonHome"
            style="@style/ButtonStyleBorderless"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/text_todo"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_back_white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,DuplicateSpeakableTextCheck"
            tools:targetApi="lollipop" />

        <ImageButton
            android:id="@+id/darckNightButtonHome"
            style="@style/ButtonStyleBorderless"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="16dp"
            android:scaleType="fitCenter"
            android:src="@drawable/day_night_ic_night"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/closeMenuButtonHome"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
            android:contentDescription="@string/text_todo" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
